--- a/Assets/Scripts/Tests/EditMode/EditMode.asmdef
+++ b/Assets/Scripts/Tests/EditMode/EditMode.asmdef
@@ -1,16 +1,21 @@
 {
-    "name": "Tests",
+    "name": "EditMode",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "MainAssembly"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "Microsoft.Extensions.DependencyInjection.Abstractions.dll",
+        "Microsoft.Extensions.DependencyInjection.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
